--- a/playground.ipynb
+++ b/playground.ipynb
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halo, nidhomun\n"
+     ]
+    }
+   ],
    "source": [
     "nama = input(\"Masukkan nama: \")\n",
     "print(\"Halo, \" + nama)"
@@ -479,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
