--- a/playground.ipynb
+++ b/playground.ipynb
@@ -169,12 +169,12 @@
    "outputs": [],
    "source": [
     "# challenge 2\n",
-    "x = ___\n",
+    "x = 10\n",
     "y = 3\n",
     "\n",
-    "command = ___(input(\"Masukkan command: \"))\n",
+    "command = int(input(\"Masukkan command: \"))\n",
     "if command == 1:\n",
-    "    print(f\"{x} pangkat {___} = {x ** y}\") # output seharusnya 1000\n",
+    "    print(f\"{x} pangkat {y} = {x ** y}\") # output seharusnya 1000\n",
     "else:\n",
     "    print(\"Command tidak dikenali\")\n"
    ]
@@ -228,14 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = 241\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
-    "x = 120,5\n",
-    "y = 120,5\n",
+    "x = 120\n",
+    "y = 121\n",
     "print(f\"x + y = {x + y}\") # x + y should be 241"
    ]
   },
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -374,18 +382,26 @@
    "source": [
     "# challenge 4\n",
     "list2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(list2[__:__:__]) # output seharusnya [9, 7, 5, 3, 1]"
+    "print(list2[8::-2]) # output seharusnya [9, 7, 5, 3, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['John', 25, 'orange', 'true', 3.14, 'apple']\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
-    "ls.___(__, ___)\n",
+    "ls[1:3] = (25, \"orange\", \"true\")\n",
     "print(ls) # Output: ['John', 25, 'orange', True, 3.14, 'apple']"
    ]
   },
@@ -429,13 +445,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "employee = {\n",
-    "    'name': 'Erik',\n",
-    "    'age': 53,\n",
+    "    'name': \"samuel\",\n",
+    "    'age': 20,\n",
     "    'address': 'Jl. Mangkunegaran 10',\n",
     "    'hobbies': ['reading', 'swimming', 'travelling'],\n",
     "    'is_married': True,\n",
@@ -448,25 +464,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samuel\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 6\n",
     "# ubah value dari key 'name' menjadi 'Samuel'\n",
-    "employee['name'] = ___\n",
+    "employee['name'] = 'samuel'\n",
     "print(employee['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 7\n",
     "# ubah value dari key 'age' menjadi 20 berdasatkan input user\n",
-    "employee['age'] = ___\n",
+    "employee['age'] = 20\n",
     "print(employee['age'])"
    ]
   }
